fixtures/external/negative/kernel-host-internal-import/smoke.ts
// @ts-nocheck
// Negative fixture: public packages must not import @mog/kernel-host-internal
import type { HostKernelAdapterBindings } from '@mog/kernel-host-internal';
